<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlayerRating</string>
    <string name="action_settings">Settings</string>
    <string name="title_players_section">Players</string>
    <string name="title_games_section">Games</string>
    <string name="title_players_stats_section">Player Stats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_string">New</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="givenname">Givenname</string>
    <string name="goals">Goals :</string>
    <string name="minutes">Minutes :</string>
    <string name="ratings">Ratings :</string>
    <string name="zero">0</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="home_team_name">Home Team</string>
    <string name="away_team_name">Away Team</string>
    <string name="colon">:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="start">Start</string>
    <string name="start_game">Start Game</string>
    <string name="end_game">End Game</string>
    <string name="substitution">Substitution</string>
    <string name="opponent">Opponent</string>
    <string name="home_game">Home Game</string>
    <string name="on_field">on field</string>
    <string name="title_activity_substitution">Substitution</string>
    <string name="start_11">Start 11</string>
    <string name="continue_string">Continue</string>
    <string name="finish_game">Finish Game</string>
    <string name="first_half">First Half:</string>
    <string name="second_half">Second Half:</string>
    <string name="title_activity_rate_players">RatePlayers</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="played_minutes">Played minutes :</string>
    <string name="title_activity_goal_scorer">GoalScorer</string>
    <string name="total">Total</string>
    <string name="average">Average</string>
    <string name="top_scorer">Top Scorer: </string>
    <string name="mvp">MVP: </string>
    <string name="most_played">Most Played: </string>
    <string name="list">List</string>
    <string name="title_activity_statistics_list">StatisticsList</string>
    <string name="title_game_stats_section">Games Stats</string>
    <string name="minutes_per_goal">Min. per goal:</string>
    <string name="win_draw_defeat">Wins-Draws-Defeats:</string>
    <string name="goal_diff">Goal difference:</string>
    <string name="best_average_rating">Best Rating:</string>
    <string name="first_half_first">1/1</string>
    <string name="first_half_second">1/2</string>
    <string name="first_half_third">1/3</string>
    <string name="second_half_first">2/1</string>
    <string name="second_half_second">2/2</string>
    <string name="second_half_third">2/3</string>
    <string name="title_activity_edit_player_property">EditPlayerProperty</string>
    <string name="add">Add</string>
    <string name="select_property_to_edit">or select a property from below to edit</string>
    <string name="title_activity_edit_goal">EditGoal</string>
    <string name="player">Player</string>
    <string name="minute">Minute</string>
    <string name="done">Done</string>
    <string name="title_activity_add_goal">AddGoal</string>
    <string name="select_game">Select Game</string>
    <string name="rating">Rating</string>
    <string name="title_activity_edit_rating">EditRating</string>
    <string name="title_activity_edit_minute">EditMinute</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="my_team_name">Team Name</string>
    <string name="half_time_duration">Half time duration</string>
    <string name="default_half_time_duration">45</string>
    <string name="min">min</string>
    <string name="minutes_per_game">Min. per game:</string>
    <string name="scoring">Scoring</string>
    <string name="conceding">Conceding</string>
    <string name="show_ratings">Show ratings</string>

</resources>