<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="football.scd.playerrating.SettingsActivity" >

    <Button
        android:id="@+id/settings_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="save"
        android:text="@string/save" />

    <Button
        android:id="@+id/settings_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="cancel"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/my_team_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/settings_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:hint="@string/my_team_name"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_below="@+id/textView1"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/settings_team_name"
        android:layout_marginTop="15dp"
        android:text="@string/half_time_duration"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/settings_half_time_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:hint="@string/default_half_time_duration"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:ems="3"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/settings_half_time_duration"
        android:layout_alignBottom="@+id/settings_half_time_duration"
        android:layout_toRightOf="@+id/settings_half_time_duration"
        android:layout_marginLeft="5dp"
        android:text="@string/min"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
