<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >

    <TextView
        android:id="@+id/home_team_name"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="end"
        android:text="@string/home_team_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/away_team_name"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/away_team_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/home_team_name"
        android:layout_alignBottom="@+id/home_team_name"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/colon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/home_team_score"
        android:layout_alignBottom="@+id/home_team_score"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/colon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/home_team_score"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/home_team_name"
        android:layout_below="@+id/home_team_name"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/away_team_score"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/away_team_name"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/increase_away_team_score"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="35dp"
        android:layout_height="35dp"
		android:layout_below="@+id/away_team_name"
        android:layout_alignLeft="@+id/away_team_name"
        android:text="@string/plus"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:onClick="increaseAwayScore"
        android:visibility="invisible" />

    <Button
        android:id="@+id/save_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save"
        android:onClick="updateGame"
        android:visibility="invisible" />

    <Button
        android:id="@+id/start_end_game_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:enabled="true"
        android:onClick="startGame"
        android:visibility="invisible"
        android:text="@string/start_game" />

    <Chronometer
        android:id="@+id/game_minutes_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/increase_away_team_score"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/minutes" />

    <Button
        android:id="@+id/substitution_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_end_game_button"
        android:layout_alignBottom="@+id/start_end_game_button"
        android:layout_alignParentRight="true"
        android:onClick="substitution"
        android:text="@string/start_11" />

    <Button
        android:id="@+id/decrease_home_team_score"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/increase_home_team_score"
        android:layout_alignBottom="@+id/increase_home_team_score"
        android:layout_toLeftOf="@+id/increase_home_team_score"
        android:onClick="decreaseHomeScore"
        android:layout_marginRight="10dp"
        android:text="@string/minus"
        android:visibility="invisible" />

    <Button
        android:id="@+id/decrease_away_team_score"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/increase_away_team_score"
        android:layout_alignBottom="@+id/increase_away_team_score"
		android:layout_toRightOf="@+id/increase_away_team_score"
        android:onClick="decreaseAwayScore"
        android:text="@string/minus"
        android:layout_marginLeft="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/delete_game_button"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_end_game_button"
        android:layout_alignBottom="@+id/start_end_game_button"
        android:layout_alignLeft="@+id/start_end_game_button"
        android:onClick="deleteGame"
        android:text="@string/delete" />

    <Button
        android:id="@+id/cancel_edit_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/substitution_button"
        android:layout_alignBottom="@+id/substitution_button"
		android:layout_centerHorizontal="true"
        android:text="@string/cancel"
        android:onClick="cancelEdit"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/half_time_text"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/game_minutes_played"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/increase_home_team_score"
        android:text="@string/first_half"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/increase_home_team_score"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/home_team_name"
        android:layout_below="@+id/home_team_name"
        android:onClick="increaseHomeScore"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/plus"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/save_game_button"
        android:layout_alignParentLeft="true"
        android:baselineAligned="false"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/game_minutes_played" >

        <ListView
            android:id="@+id/home_goal_list_view"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1" >
        </ListView>
        
        <ListView
            android:id="@+id/away_goal_list_view"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1" >
        </ListView>

    </LinearLayout>

    <Button
        android:id="@+id/show_ratings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/show_ratings"
        android:onClick="showRatings"
        android:visibility="invisible" />

</RelativeLayout>