<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opponent"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/opponent_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/opponent"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/is_home_game"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/home_game" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <Button
        	android:id="@+id/cancel_button"
        	android:layout_marginTop="50dp"
        	android:layout_width="100dp"
        	android:onClick="cancel"
        	android:layout_height="wrap_content"
        	android:text="@string/cancel" />

        <TextView
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="saveGame"
            android:layout_marginTop="50dp"
            android:text="@string/save" />
        
    </LinearLayout>

</LinearLayout>